@@ -19,8 +19,8 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 import com.ezylang.evalex.parser.ParseException;
 import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 import org.junit.jupiter.api.Test;
 
@@ -35,7 +35,7 @@ class ExpressionEvaluatorCombinedTest extends BaseExpressionEvaluatorTest {
     position.put("article", 3114);
     position.put("amount", 3);
     position.put("price", new BigDecimal("14.95"));
-    order.put("positions", List.of(position));
+    order.put("positions", Collections.singletonList(position));
 
     Expression expression =
         new Expression("order.positions[x].amount * order.positions[x].price")
