@@ -21,6 +21,7 @@ import com.ezylang.evalex.config.ExpressionConfiguration;
 import com.ezylang.evalex.data.EvaluationValue;
 import com.ezylang.evalex.parser.ParseException;
 import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -57,7 +58,7 @@ class ExpressionEvaluatorDecimalPlacesTest extends BaseExpressionEvaluatorTest {
 
   @Test
   void testDefaultNoRoundingArray() throws ParseException, EvaluationException {
-    List<BigDecimal> array = List.of(new BigDecimal("1.12345"));
+    List<BigDecimal> array = Collections.singletonList(new BigDecimal("1.12345"));
     Expression expression = createExpression("a[0]").with("a", array);
 
     assertThat(expression.evaluate().getStringValue()).isEqualTo("1.12345");
@@ -66,7 +67,7 @@ class ExpressionEvaluatorDecimalPlacesTest extends BaseExpressionEvaluatorTest {
   @Test
   void testDefaultNoRoundingStructure() throws ParseException, EvaluationException {
     Map<String, BigDecimal> structure =
-        new HashMap<>() {
+        new HashMap<String, BigDecimal>() {
           {
             put("b", new BigDecimal("1.12345"));
           }
@@ -128,7 +129,7 @@ class ExpressionEvaluatorDecimalPlacesTest extends BaseExpressionEvaluatorTest {
   void testCustomRoundingDecimalsArray() throws ParseException, EvaluationException {
     ExpressionConfiguration config =
         ExpressionConfiguration.builder().decimalPlacesRounding(3).build();
-    List<BigDecimal> array = List.of(new BigDecimal("1.12345"));
+    List<BigDecimal> array = Collections.singletonList(new BigDecimal("1.12345"));
     Expression expression = new Expression("a[0]", config).with("a", array);
 
     assertThat(expression.evaluate().getStringValue()).isEqualTo("1.123");
@@ -139,7 +140,7 @@ class ExpressionEvaluatorDecimalPlacesTest extends BaseExpressionEvaluatorTest {
     ExpressionConfiguration config =
         ExpressionConfiguration.builder().decimalPlacesRounding(3).build();
     Map<String, BigDecimal> structure =
-        new HashMap<>() {
+        new HashMap<String, BigDecimal>() {
           {
             put("b", new BigDecimal("1.12345"));
           }
