@@ -22,6 +22,7 @@ import com.ezylang.evalex.Expression;
 import com.ezylang.evalex.operators.arithmetic.InfixMultiplicationOperator;
 import com.ezylang.evalex.operators.arithmetic.PrefixMinusOperator;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -32,7 +33,7 @@ class ShuntingYardExceptionsTest extends BaseParserTest {
 
   @Test
   void testUnexpectedToken() {
-    List<Token> tokens = List.of(new Token(1, "x", FUNCTION_PARAM_START));
+    List<Token> tokens = Collections.singletonList(new Token(1, "x", FUNCTION_PARAM_START));
     assertThatThrownBy(new ShuntingYardConverter("x", tokens, configuration)::toAbstractSyntaxTree)
         .isInstanceOf(ParseException.class)
         .hasMessage("Unexpected token of type 'FUNCTION_PARAM_START'");
@@ -40,7 +41,8 @@ class ShuntingYardExceptionsTest extends BaseParserTest {
 
   @Test
   void testMissingPrefixOperand() {
-    List<Token> tokens = List.of(new Token(1, "-", PREFIX_OPERATOR, new PrefixMinusOperator()));
+    List<Token> tokens =
+        Collections.singletonList(new Token(1, "-", PREFIX_OPERATOR, new PrefixMinusOperator()));
     assertThatThrownBy(new ShuntingYardConverter("-", tokens, configuration)::toAbstractSyntaxTree)
         .isInstanceOf(ParseException.class)
         .hasMessage("Missing operand for operator");
@@ -87,7 +89,8 @@ class ShuntingYardExceptionsTest extends BaseParserTest {
   @Test
   void testDoubleStructureOperator() {
     List<Token> tokens =
-        List.of(new Token(1, ".", STRUCTURE_SEPARATOR), new Token(2, ".", STRUCTURE_SEPARATOR));
+        Arrays.asList(
+            new Token(1, ".", STRUCTURE_SEPARATOR), new Token(2, ".", STRUCTURE_SEPARATOR));
     assertThatThrownBy(new ShuntingYardConverter("..", tokens, configuration)::toAbstractSyntaxTree)
         .isInstanceOf(ParseException.class)
         .hasMessage("Missing operand for operator");
@@ -96,7 +99,7 @@ class ShuntingYardExceptionsTest extends BaseParserTest {
   @Test
   void testStructureFollowsPostfixOperator() {
     List<Token> tokens =
-        List.of(new Token(1, ".", STRUCTURE_SEPARATOR), new Token(2, "!", POSTFIX_OPERATOR));
+        Arrays.asList(new Token(1, ".", STRUCTURE_SEPARATOR), new Token(2, "!", POSTFIX_OPERATOR));
     assertThatThrownBy(new ShuntingYardConverter("..", tokens, configuration)::toAbstractSyntaxTree)
         .isInstanceOf(ParseException.class)
         .hasMessage("Missing operand for operator");
@@ -105,7 +108,7 @@ class ShuntingYardExceptionsTest extends BaseParserTest {
   @Test
   void testStructureFollowsTwoPostfixOperators() {
     List<Token> tokens =
-        List.of(
+        Arrays.asList(
             new Token(1, ".", STRUCTURE_SEPARATOR),
             new Token(2, "!", POSTFIX_OPERATOR),
             new Token(2, "!", POSTFIX_OPERATOR));
